# voxel-game

./: .gitignore  Cargo.toml  LICENSE  README.md  build_atlas.py
src/: blocks.rs  constants.rs  main.rs  menu.rs  player.rs  render.rs  state.rs  ui.rs  world.rs
